--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,22 @@
     "sourceMap": false,         // allow sourcemap support
     "strictNullChecks": true,   // enable strict null checks as a best practice
     "module": "es6",            // specify module code generation
-    "jsx": "react",             // use typescript to transpile jsx to js
-    "target": "es5",            // specify ECMAScript target version
+    "jsx": "react-native" /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */,
+    "target": "esnext" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */,
+    "noEmit": true /* Do not emit outputs. */,
+    "isolatedModules": true /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */,
     "allowJs": true,            // allow a partial TypeScript and JavaScript codebase
     "allowSyntheticDefaultImports": true, // import default
-    "baseUrl": "."
+    /* Module Resolution Options */
+    "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
+    "baseUrl": "./" /* Base directory to resolve non-absolute module names. */,
+    "typeRoots": [
+      "./src/types",
+      "./node_modules/@types"
+    ] /* List of folders to include type definitions from. */,
+    "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
+    // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
+    "skipLibCheck": false /* Skip type checking of declaration files. */,
   },
   "include": [
     "./src/"
