--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-nice-avatar",
+  "name": "react-native-nice-avatar",
   "version": "1.2.4",
-  "description": "react library for generating avatar",
+  "description": "react native library for generating avatar",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {},
@@ -76,7 +76,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dapilab/react-nice-avatar"
+    "url": "https://github.com/sirfitz/react-native-nice-avatar"
   },
   "browserslist": [
     "last 2 versions"
