--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "react-native-nice-avatar",
   "version": "1.2.4",
   "description": "react native library for generating avatar",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.js",
+  "types": "src/types.ts",
   "scripts": {},
   "keywords": [
     "react",
