--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-nice-avatar",
+  "name": "react-native-nice-avatar",
   "version": "1.2.4",
-  "description": "react library for generating avatar",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "description": "react native library for generating avatar",
+  "main": "src/index.tsx",
+  "types": "src/types.ts",
   "scripts": {},
   "keywords": [
     "react",
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "chroma-js": "^2.1.2",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-native": "^0.67.2",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -74,7 +76,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/dapilab/react-nice-avatar"
+    "url": "https://github.com/sirfitz/react-native-nice-avatar"
   },
   "browserslist": [
     "last 2 versions"
