--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chroma-js": "^2.1.2",
     "prop-types": "^15.7.2",
     "react-native": "^0.67.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
